Fixed Problem with animateion overlap on Store Change

--- a/src/components/Main/Overlays/ShopDetailOverlay.scss
+++ b/src/components/Main/Overlays/ShopDetailOverlay.scss
@@ -1,5 +1,5 @@
 .shopDetailOverlay{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     max-width: 100vw;
